--- a/dataframe to sql.ipynb
+++ b/dataframe to sql.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import sqlite3\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,6 +188,13 @@
     "conn.commit()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
